--- a/ChaliceECMOSimulator/SingleParameterController/View/SingleParameterController.xaml
+++ b/ChaliceECMOSimulator/SingleParameterController/View/SingleParameterController.xaml
@@ -11,11 +11,14 @@
 
  
         <StackPanel Grid.Column="0" Grid.Row="3" Margin="0,0,0,0" Width="140" Height="385" Background="#222222">
+        <StackPanel.DataContext>
+            <local:SingleParametersViewModel></local:SingleParametersViewModel>
+        </StackPanel.DataContext>
             <Grid Background="DarkRed" >
                 <TextBlock Text="HEARTRATE" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="10" ></TextBlock>
                 <Button Content="O" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0,2,0,3" ></Button>
                 <Button Content="X" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Padding="0,2,0,3" ></Button>
-            <TextBlock x:Name="txtCurrentValue" Text="{x:Bind Path=ViewModel.CurrentValue, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,20" FontWeight="Bold" FontSize="28"/>
+            <TextBlock x:Name="txtCurrentValue" Text="{Binding CurrentValue, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,20" FontWeight="Bold" FontSize="28"/>
                 <Button Content="limits" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="0,2,0,3" ></Button>
                 <Button Content="bpm" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="0,2,0,3" ></Button>
             </Grid>
@@ -24,7 +27,7 @@
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
 
-            <Slider x:Name="sliTargetValue" Orientation="Vertical" Width="35" Height="150" VerticalAlignment="Top" Margin="0,0,20,0" ></Slider>
+            <Slider x:Name="sliTargetValue" Value="{Binding TargetValue, Mode=TwoWay}" Minimum="{Binding LowerLimit}" Maximum="{Binding UpperLimit}" Orientation="Vertical" Width="35" Height="150" VerticalAlignment="Top" Margin="0,0,20,0" ></Slider>
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal">
                         <Button Content="+" Margin="0,5,0,0" Width="22" FontSize="10" BorderThickness="0" HorizontalAlignment="Center" Padding="0,2,0,4" ></Button>
@@ -69,8 +72,8 @@
             </ComboBox>
         </Grid>
             
-        <Button x:Name="butStart" Click="ButStart_Click" Content="START"  Margin="0,10,0,0" FontSize="12" FontWeight="Bold" Width="140" BorderThickness="0" HorizontalAlignment="Center" Padding="0,2,0,4" ></Button>
-        <TextBlock Text="normal" Margin="0,5,0,0" Foreground="Green" TextAlignment="Center" Width="140" FontSize="10" FontWeight="Normal"></TextBlock>
+        <Button x:Name="butStart" Command="{Binding MyCommand}" Content="START"  Margin="0,10,0,0" FontSize="12" FontWeight="Bold" Width="140" BorderThickness="0" HorizontalAlignment="Center" Padding="0,2,0,4" ></Button>
+        <TextBlock Text="{Binding ControllerStatus}" Foreground="{Binding StatusColor}" Margin="0,5,0,0" TextAlignment="Center" Width="140" FontSize="10" FontWeight="Normal"></TextBlock>
         </StackPanel>
 
 </UserControl>
