--- a/ChaliceECMOSimulator/SingleParameterController/SingleParameterController.xaml
+++ b/ChaliceECMOSimulator/SingleParameterController/SingleParameterController.xaml
@@ -11,29 +11,40 @@
 
 
     <StackPanel x:Name="stackMain" Grid.Column="0" Grid.Row="3" Margin="0,0,0,0" Width="140" Height="{x:Bind ControlHeight, Mode=OneWay}" Background="#222222" VerticalAlignment="Top">
-        <Grid Background="DarkSlateGray" >
+        <Grid Background="{x:Bind HeaderColor, Mode=OneWay}" >
                 <TextBlock Text="{x:Bind Title, Mode=OneWay}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="10" ></TextBlock>
                 <Button x:Name="butExpand" Click="ButExpand_Click" Content="O" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0,2,0,3" ></Button>
                 <Button Content="X" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Padding="0,2,0,3" ></Button>
+                <ToggleButton x:Name="butAlarmsSwitch"  Content="A" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="0,2,0,3" IsChecked="{x:Bind AlarmsEnabled, Mode=TwoWay}"  ></ToggleButton>
+
             <TextBlock x:Name="txtCurrentValue" Text="{x:Bind Path=CurrentValueString, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,20" FontWeight="Bold" FontSize="28"/>
-                             <TextBlock Text="bpm" Width="25" FontSize="8" Opacity="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="0,2,0,3" ></TextBlock>
+            <TextBlock Text="{x:Bind Unit, Mode=OneWay}" Width="25" FontSize="8" Opacity="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="0,2,0,3" ></TextBlock>
             </Grid>
             <Button Content="target state" FontSize="10" Width="140" Height="20"  BorderThickness="0" HorizontalAlignment="Center" Margin="0,0,0,0" Padding="0,1,0,4" ></Button>
 
         <Grid HorizontalAlignment="Center" Width="140">
             <Button x:Name="butPlus" Click="ButPlus_Click" Content="+" Margin="0,0,0,0" Width="31" FontSize="10" BorderThickness="0" HorizontalAlignment="Right" Padding="0,2,0,4" ></Button>
-            <TextBlock x:Name="txtTargetValue2" Visibility="Collapsed" Text="{Binding ElementName=sliTargetValue2, Path=Value}"  Margin="0,0,0,0" Width="33" TextAlignment="Center"  FontWeight="Normal"  ></TextBlock>
-            <TextBlock x:Name="txtTargetValue" Text="{Binding ElementName=sliTargetValue, Path=Value}"  Margin="0,0,0,0" Width="33" TextAlignment="Center"  FontWeight="Normal"  ></TextBlock>
+            <TextBlock x:Name="txtTargetValue2" Tapped="SliTargetValue2_Tapped" Visibility="Collapsed" Text="{Binding ElementName=sliTargetValue2, Path=Value}" Foreground="{x:Bind SelColor2, Mode=OneWay}"  Margin="0,0,0,0" Width="33" TextAlignment="Center"  FontWeight="Normal"  ></TextBlock>
+            <TextBlock x:Name="txtTargetValue" Tapped="SliTargetValue_Tapped" Text="{Binding ElementName=sliTargetValue, Path=Value}" Foreground="{x:Bind SelColor1, Mode=OneWay}" Margin="0,0,0,0" Width="33" TextAlignment="Center"  FontWeight="Normal"  ></TextBlock>
             <Button x:Name="butMinus" Click="ButMinus_Click" Content="-" Margin="0,0,0,0" Width="31" FontSize="10" BorderThickness="0" HorizontalAlignment="Left" Padding="0,2,0,4" ></Button>
         </Grid>
 
         <Grid>
-            <Slider x:Name="sliTargetValue2" Value="{x:Bind TargetValue2, Mode=TwoWay}" Visibility="Collapsed" Tapped="SliTargetValue_Tapped" Minimum="{x:Bind LowerLimit}" Maximum="{x:Bind UpperLimit}" Orientation="Vertical" Width="35" Height="150" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" ValueChanged="SliTargetValue_ValueChanged" ></Slider>
-            <Slider x:Name="sliTargetValue" Value="{x:Bind TargetValue, Mode=TwoWay}" Tapped="SliTargetValue_Tapped" Minimum="{x:Bind LowerLimit}" Maximum="{x:Bind UpperLimit}" Orientation="Vertical" Width="35" Height="150" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" ValueChanged="SliTargetValue_ValueChanged" ></Slider>
-            <ToggleButton x:Name="butLimits" Click="ButLimits_Click" Content="fluct" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0" Padding="0,2,0,3" IsChecked="{x:Bind FluctStatus, Mode=OneWay}" ></ToggleButton>
+            <Slider x:Name="sliTargetValue2" Value="{x:Bind TargetValue2, Mode=TwoWay}" Tapped="SliTargetValue2_Tapped" Visibility="Collapsed" Minimum="{x:Bind LowerLimit, Mode=OneWay}" Maximum="{x:Bind UpperLimit, Mode=OneWay}" Orientation="Vertical" Width="35" Height="150" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" ValueChanged="SliTargetValue_ValueChanged" ></Slider>
+            <Slider x:Name="sliTargetValue" Value="{x:Bind TargetValue, Mode=TwoWay}" Tapped="SliTargetValue_Tapped" Minimum="{x:Bind LowerLimit, Mode=OneWay}" Maximum="{x:Bind UpperLimit, Mode=OneWay}" Orientation="Vertical" Width="35" Height="150" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" ValueChanged="SliTargetValue_ValueChanged" ></Slider>
+            <ToggleButton x:Name="butLimits" Click="ButLimits_Click" Content="fluct" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0" Padding="0,2,0,3" IsChecked="{x:Bind FluctStatus, Mode=OneWay}"  ></ToggleButton>
             <ToggleButton x:Name="butAuto" Click="ButAuto_Click" Content="auto" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,30,0,0" Padding="0,2,0,3" ></ToggleButton>
-            <ToggleButton x:Name="butLock" Visibility="Collapsed" Content="lock" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,0,0" Padding="0,2,0,3" ></ToggleButton>
+            <ToggleButton x:Name="butLock" Click="ButLock_Click" Content="lock" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,0,0" Padding="0,2,0,3" ></ToggleButton>
+            <ToggleButton x:Name="butUpperLower" Click="ButUpperLower_Click" Content="limits" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0" Padding="0,2,0,3" IsChecked="{x:Bind ShowLimits, Mode=OneWay}" ></ToggleButton>
+            <ToggleButton x:Name="butAlarms" Click="ButAlarms_Click" Content="alarms" Width="30" FontSize="8" Opacity="1" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,30,0,0" Padding="0,2,0,3" IsChecked="{x:Bind ShowAlarmLimits, Mode=OneWay}" ></ToggleButton>
 
+            <TextBox x:Name="txtLowerLimit"  Visibility="Collapsed" Background="Black" Opacity="0.6" Foreground="White" TextChanged="TxtFluctWidth_TextChanged" Text="{x:Bind LowerLimit, Mode=OneWay}" BorderThickness="0" VerticalAlignment="Bottom"  HorizontalAlignment="Center" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" Margin="-3,0,0,0" TextAlignment="Center" ></TextBox>
+            <TextBox x:Name="txtUpperLimit"  Visibility="Collapsed" Background="Black" Opacity="0.6" Foreground="White"  TextChanged="TxtFluctWidth_TextChanged" Text="{x:Bind UpperLimit, Mode=OneWay}" BorderThickness="0" VerticalAlignment="Top"  HorizontalAlignment="Center" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" Margin="-3,0,0,0" TextAlignment="Center" ></TextBox>
+
+            <TextBox x:Name="txtLowerAlarmLimit"  Visibility="Collapsed" Background="Black" Opacity="0.6" Foreground="White" TextChanged="TxtFluctWidth_TextChanged" Text="{x:Bind LowerAlarmLimit, Mode=OneWay}" BorderThickness="0" VerticalAlignment="Bottom"  HorizontalAlignment="Center" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" Margin="-3,0,0,0" TextAlignment="Center" ></TextBox>
+            <TextBox x:Name="txtUpperAlarmLimit"  Visibility="Collapsed"  Background="Black" Opacity="0.6" Foreground="White" TextChanged="TxtFluctWidth_TextChanged" Text="{x:Bind UpperAlarmLimit, Mode=OneWay}" BorderThickness="0" VerticalAlignment="Top"  HorizontalAlignment="Center" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" Margin="-3,0,0,0" TextAlignment="Center" ></TextBox>
+
+            
         </Grid>
         
 
@@ -77,8 +88,8 @@
 
         <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
             <TextBlock Text=" Fluctation" Width="70" TextAlignment="Left" FontSize="10" FontWeight="Normal" Foreground="White"></TextBlock>
-            <ToggleButton x:Name="butFluct" Content="{x:Bind FluctStatusString, Mode=OneWay}" Click="ButFluct_Click"  FontSize="10" Height="15"  Width="50" Padding="0,-3,0,0" HorizontalAlignment="Center" IsChecked="{x:Bind FluctStatus, Mode=OneWay}"/>
-
+            <ToggleButton x:Name="butFluct" Content="{x:Bind FluctStatusString1, Mode=OneWay}" Click="ButFluct_Click"  FontSize="10" Height="15"  Width="25" Padding="0,-3,0,0" HorizontalAlignment="Center" IsChecked="{x:Bind FluctStatus1, Mode=OneWay}"/>
+            <ToggleButton x:Name="butFluct2" Content="{x:Bind FluctStatusString2, Mode=OneWay}" Click="ButFluct2_Click"  FontSize="10" Height="15"  Width="25" Padding="0,-3,0,0" HorizontalAlignment="Center" IsChecked="{x:Bind FluctStatus2, Mode=OneWay}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
             <TextBlock Text=" > mode" Width="70" TextAlignment="Left" FontSize="10" FontWeight="Normal" Foreground="White"></TextBlock>
@@ -86,12 +97,12 @@
 
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-            <TextBlock Text=" > delta (%)" Width="70" FontSize="10" HorizontalAlignment="Left"></TextBlock>
-            <TextBox x:Name="txtFluctWidth" TextChanged="TxtFluctWidth_TextChanged" Text="280" BorderThickness="0"  HorizontalAlignment="Right" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" TextAlignment="Center" ></TextBox>
+            <TextBlock x:Name="txtFlucDeltaTitle" Text=" > width (%)" Width="70" FontSize="10" HorizontalAlignment="Left"></TextBlock>
+            <TextBox x:Name="txtFluctWidth" TextChanged="TxtFluctWidth_TextChanged" Text="1" BorderThickness="0"  HorizontalAlignment="Right" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" TextAlignment="Center" ></TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-            <TextBlock Text=" > time (ms)" Width="70" FontSize="10" HorizontalAlignment="Left"></TextBlock>
-            <TextBox x:Name="txtFluctTime" TextChanged="TxtFluctTime_TextChanged" Text="4" BorderThickness="0"  HorizontalAlignment="Right" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" TextAlignment="Center" ></TextBox>
+            <TextBlock x:Name="txtFlucTimeTitle" Text=" > freq. (ms)" Width="70" FontSize="10" HorizontalAlignment="Left"></TextBlock>
+            <TextBox x:Name="txtFluctTime" TextChanged="TxtFluctTime_TextChanged" Text="500" BorderThickness="0"  HorizontalAlignment="Right" Height="18" Padding="0,2,0,0" FontSize="10" Width="50" TextAlignment="Center" ></TextBox>
         </StackPanel>
 
 
