--- a/ChaliceECMOSimulator/ParameterController/ParameterController.xaml
+++ b/ChaliceECMOSimulator/ParameterController/ParameterController.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="ChaliceECMOSimulator.SingleParameterController"
+    x:Class="ChaliceECMOSimulator.ParameterController"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ChaliceECMOSimulator"
