--- a/ChaliceECMOSimulator/ParameterController/ParameterController.xaml
+++ b/ChaliceECMOSimulator/ParameterController/ParameterController.xaml
@@ -15,11 +15,13 @@
                 <TextBlock Text="{x:Bind Title, Mode=OneWay}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="10" ></TextBlock>
                 <Button x:Name="butExpand" Click="ButExpand_Click" Content="O" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0,2,0,3" ></Button>
                 <Button Content="X" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Padding="0,2,0,3" ></Button>
-                <ToggleButton x:Name="butAlarmsSwitch"  Content="A" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="0,2,0,3" IsChecked="{x:Bind AlarmsEnabled, Mode=TwoWay}"  ></ToggleButton>
-
+          
+            <ToggleButton x:Name="butAlarmsSwitch"  Content="A" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="0,2,0,3" IsChecked="{x:Bind AlarmsEnabled, Mode=TwoWay}"  ></ToggleButton>
+            <ProgressBar Visibility="Collapsed" x:Name="pgbSmall" Maximum="{x:Bind MaxValuePgb,Mode=OneWay}" Minimum="0" Value="{x:Bind TimeLeft, Mode=OneWay}" VerticalAlignment="Bottom" Height="5" Margin="25,0,25,0"></ProgressBar>
             <TextBlock x:Name="txtCurrentValue" Text="{x:Bind Path=CurrentValueString, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,15,0,20" FontWeight="Bold" FontSize="28"/>
-            <TextBlock Text="{x:Bind Unit, Mode=OneWay}" Width="25" FontSize="8" Opacity="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="0,2,0,3" ></TextBlock>
-            </Grid>
+            <ToggleButton  Content="{x:Bind Unit, Mode=OneWay}" Width="25" FontSize="8" Opacity="0.5" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="0,2,0,3"  ></ToggleButton>
+
+                     </Grid>
             <Button Content="target state" FontSize="10" Width="140" Height="20"  BorderThickness="0" HorizontalAlignment="Center" Margin="0,0,0,0" Padding="0,1,0,4" ></Button>
 
         <Grid HorizontalAlignment="Center" Width="140">
