--- a/ChaliceECMOSimulator/MainPage.xaml
+++ b/ChaliceECMOSimulator/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ChaliceECMOSimulator"
+    xmlns:graph="using:ChaliceECMOSimulator.ParameterGraph"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -20,6 +21,9 @@
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
 
+        <graph:ParameterGraph Grid.Column="0" Grid.Row="1"></graph:ParameterGraph>
+        <graph:ParameterGraph Grid.Column="2" Grid.Row="1"></graph:ParameterGraph>
+        
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2">
             <local:ParameterController Margin="5,0,0,0" ></local:ParameterController>
             <local:ParameterController Margin="5,0,0,0" ></local:ParameterController>
